--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,15 @@ logging.level.root=INFO
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mariadb://localhost:3306/restaurangdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8081
+
+
+
+
+
